prompt change for model example output

--- a/rap_transformer.ipynb
+++ b/rap_transformer.ipynb
@@ -1585,139 +1585,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 145,
-     "referenced_widgets": [
-      "d1dbc49d5b894767b338c0d9a95b12b3",
-      "3ef00d4be1e14f57a5718b0a6275ab17",
-      "3d2cfe1a294f42e69d7fa5e5d1f0d017",
-      "2211b52953c941798e7315ce749eab11",
-      "f627049c0ba14ee3b6213777ec134edc",
-      "30b48bb391e94eadb7e420cebc72e2aa",
-      "6682e7c04e1d4f1c973561d55442a8bf",
-      "42a37942e10a4932ac7d95b51cd2239b",
-      "9e0aacfd06c3482fbf0655b840307d18",
-      "20ab23828f4143969232d2031779b957",
-      "5607b9f4283d446fa361304b733c6167",
-      "2db8bf8e858847948b175701896c8d3f",
-      "6e5b0916a5404c0aae6dd39424c20620",
-      "af94880774504aa8ac60dab635e18173",
-      "931716277abe4a96a8445567deaea09e",
-      "f81909907ebc4b3d9bab569313192574",
-      "afb389d3206f456aac9417ce6608072c",
-      "5c953f41b98e4cc797f5b90d68b74494",
-      "4b5fe051374a406e973ab8e120542779",
-      "ad3ff7138be7444ab4afe653ee93625f",
-      "df6d333d2a60475b8cfe75e6c9193d22",
-      "a1f678c63e42443caeb2da18d16ffc86",
-      "97394747b56843d58d0eeb6e8c81e128",
-      "52fc05c322bd4ae89752cdb715da2cd6",
-      "0045b47feaa84761b85c9caa0cea54fb",
-      "772f5f7e23a44bd3aadcb1c97c1a73ba",
-      "1672628e34c646b0933a5b85b54252f6",
-      "055e78aae3cc4ae5b8df3f33d00831a7",
-      "e49ff8b7df5a40edb63e882006e7014b",
-      "dc067883b5564884b157faa5b7865433",
-      "d920d161794c4c179ae76c4235c39d2f",
-      "74c4c26d8ef34c8688809d088425a1cf",
-      "0582a11e32bc4864ac11ca8c2c2e9f74",
-      "317453bc07934f42915fc9ad37be10de",
-      "097ce38982d74b4ca175877bf62ca1ad",
-      "94ce02c40b90478bafa52926b2467917",
-      "fcc386415fed4f2aafa1ce7a38238afa",
-      "96c7d4feb354413194b606f7d74e6547",
-      "06e7b0e58fc24dbf89eaea02b446da75",
-      "d5cf2433cebd45db88c0e53409a71f0d",
-      "2f1953e4d5e4430882371d294492cd32",
-      "4d8730820f8e4313889990df4290273d",
-      "f4190007cb4a4063b83ce72849e0c32b",
-      "afe65f5aee714b1684b851b63aa1db75"
-     ]
-    },
-    "id": "xbc1q_07Ighd",
-    "outputId": "0f3ad772-0535-4c50-fd95-5500a2b54598"
+    "id": "xbc1q_07Ighd"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1dbc49d5b894767b338c0d9a95b12b3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/556 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2db8bf8e858847948b175701896c8d3f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/999k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97394747b56843d58d0eeb6e8c81e128",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "317453bc07934f42915fc9ad37be10de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/470 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
     "\n",
-    "# Load your custom model and tokenizer\n",
+    "# Load custom model and tokenizer\n",
     "model = GPT2LMHeadModel.from_pretrained(\"Elida-Sensoy/gpt2-eminem-lyrics\")\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(\"Elida-Sensoy/gpt2-eminem-lyrics\")\n",
     "\n",
-    "# Ensure tokenizer uses pad_token if missing\n",
+    "# tokenizer uses pad_token if missing\n",
     "tokenizer.pad_token = tokenizer.eos_token\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "kvcOLWCnIosJ",
-    "outputId": "1b0010d5-1ad2-44b7-d156-8bc83455d851"
+    "outputId": "55c7bf93-b384-47b1-cc9f-d3cd895ebae6"
    },
    "outputs": [
     {
@@ -1733,13 +1625,13 @@
      "text": [
       "\n",
       "🎵 Verse 1:\n",
-      "This is a madhouse. If anybody wants a little elbow roomThe game's on.They say I love you too, so go and fuck an Elco-owned beat!Oh and try the shit I do here; all-you-fucking kids just keep getting olderAnd they want nothing more.There's more that they want, that they do not want at allThe new kid on the block, who's as tough to beThe first word to everyone's list when you say the exact same thingBut everyone has something interesting saidNow take this chanceYou just sent the whole Hip Hop Department into convulsionsYou'll end up having your whole school run rioted in reactionYou will be sued 'round'The whole country's just gonna gather at willA little tear-filled room full of thugs to stage an orderly assaultIf any one's watching them nowYou can all watch 'cause it might come back out the gate in what comes nextThe sight does nothing for nothing is esc\n",
+      "There is no fun. Of course I am joking. But life's a game but your skill's on my line like no I don't know why so farI been in three lanes, never able to slow upThere's shit I do that will get me downThere's dirt, shit that's nastyBut there's nothing left.There's nothing that anybody gives a goddamn reason what there feels to feelThe only thing I love is competitionNow you know that feeling in which the greatest belongNobody ever caught it better than Nate Dworkin'You're still fucking beautifulNow take this chanceYou just wanna show them just how much you've already gotThere's shit you can do when you just liveIt only gets better when you put it in people's facesThat's called recognitionYou got recognition, DreThe fans can relate you just great if you act like meIf I did my jobs perfect rightYou can grow up to suck shit quicker.Yo I do everything in my power to bring it up\n",
       "\n",
       "🎵 Verse 2:\n",
-      "This is a madhouse.So what's the problem bitch, a madhouse just madas me??The problem is the other rapper just dissing meThe trouble is every time I mics somebody's song, so let you beat each other upAnd you're supposed to never find a way to beat up me cause[Ozzy:]You have done everything one says you'll do no worse'Forever gonna do anything except cry foulNow everybody, check yourself and your thoughtsCause even when a rumour goes byThat everything's ok it's gonna be alright 'til Proof shows up cause he knows nothingBut that don't mean he ain't welcome, you just know thatJust to hear how much they shake you like a rag and pull you with'Cause you don't know nothingAbout how that'll shake the world and everyone wants a hit 'cause it's funny but what your problems are cause one year's separation of parents left[Proof:]Just got caught fraudin this paper, cheated\n",
+      "There is no fun. Of course I am joking.So what's the problem?It's nothing, just the past that we liveThe future we plan for just don't arrive atAll we want is one for the time beingSo goodbye!You know we love ya!And if your home of horrorsA place where none existAnd I just can't say for certain thatThere isn't anyone out there who knowsThat I believe in loveMaybe that hurts (haha), maybe that's what hurtsMaybe it's the same maybe that made her sickThis monster loves me even though she's got me seething(whoa what?)[Chorus][Eminem (Sia): \"Can't hear her sobbing louder anymore\":]There comes a time in every couple that we settle or close or where our love or at this late dateIf we ever hit up that exact same placeOr get into an argument and I feel the need to kick it and call or text and reach\n",
       "\n",
       "🎵 Verse 3:\n",
-      "This is a madhouse. Ain't nobody who's more capable of shaking this game.Fuck every nigga tonightHe don't get no respect whatsoever by the nigger!You a-holes don't gotta have no brains when ya talk!If you wanna get up, quit talkin'.Man you get off lightly bitches no man, that shit belongs to you.I hear Shady was gettin kicked the nigga hard all spring through yo fuckin' penIt must have taken forever, I was push 'bin hard but if I would I think there needs ta be something about usIt just shouldn't ever, it's really time to bust that habitAnd try to take off againI better leave a new yachted bitch alone I'mma take yack 'til someone puts them on my fuckin' carpetDon't give an answer yo niggas fuck about no bitch you want her left to play the same as fuck you with this beat cause homie no I love yaBut\n"
+      "There is no fun. Of course I am joking. You'd think there was more drama but there isn't.Don't even get me started..You're nuts. Go after 'em all!You feel so empty inside. Don't you ever breathe easy and hard again?This is all you ever talk. No! Stop. This is all you ever tell me that I must take!Now what we in this business do when we get heated..You can call me cold or sweet or bitter,Whatever our taste and your intentionsWe as Americans are always looking at each other and there won't be no difference we made in this competition, no difference.Canadians know that in each season we push off (off)The more changes make we endure in realityThen our relationship in the game (introduce us)...And so how are we set upon?Shoulders or nocksAre always pointed (a nose or a hump is placed in)We will tell you the difference is the bigger\n"
      ]
     }
    ],
@@ -1750,13 +1642,13 @@
     "generator = pipeline(\"text-generation\", model=\"Elida-Sensoy/gpt2-eminem-lyrics\")\n",
     "set_seed(52)  # for reproducibility\n",
     "\n",
-    "prompt = \"This is a madhouse.\"  # your starting line\n",
+    "prompt = \"There is no fun. Of course I am joking.\"  # your starting line\n",
     "\n",
     "results = generator(\n",
     "    prompt,\n",
     "    max_length=200,\n",
     "    num_return_sequences=3,      #  generate 3 completions\n",
-    "    temperature=1.85,             # higher = more creative\n",
+    "    temperature=1.75,             # higher = more creative\n",
     "    top_p=0.95,                  #  nucleus sampling\n",
     "    do_sample=True,\n",
     "    truncation=True,\n",
